--- a/public/scss/pages/_profile.scss
+++ b/public/scss/pages/_profile.scss
@@ -2025,6 +2025,7 @@ span.password-info {
                     background: rgba(255, 95, 68, .7);
                     opacity: 0;
                     transition: all 0.5s;
+                    border-radius: 10px;
                 }
             }
             .title {
